workspace/VB_EOVB/src/grammar/GrammarParser.java
// $ANTLR 3.4 /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g 2012-07-09 11:48:53

	package grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class GrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AMPERSAND", "AND", "ARG", "ARGUMENTUSE", "ARITHMETIC", "ASSIGN", "BOOLEAN", "CALLABLE", "CHAR", "CHARACTER", "CHARAND", "CHARFALSE", "CHARNOT", "CHAROR", "CHARTRUE", "CLOSEDCOMPOUND", "COLON", "COMMA", "COMMENT", "COMPOUND", "CONDITIONAL", "DECLARATION", "DECLARGUMENTS", "DIGIT", "DIVIDE", "DO", "ELSE", "EQUAL", "EXPRESSION", "EXPRESSIONS", "FI", "FUNCTIONDECLARATION", "GREATER", "GREATEREQ", "IDENTIFIER", "IF", "INTEGER", "LCURLY", "LETTER", "LOWER", "LPAREN", "MINUS", "MULTI", "NOT", "NOTEQUAL", "NUMBER", "OD", "OR", "PLUS", "PRINT", "PROCEDUREDECLARATION", "PROGRAM", "QUOTE", "RCURLY", "READ", "RETURN", "ROUTINECALL", "RPAREN", "SEMICOLON", "SINGLEQUOTE", "SMALLER", "SMALLEREQ", "STRING", "SUBEXPRESSION", "TEXT", "THEN", "UPPER", "VOID", "WHILE", "WS"
    };

    public static final int EOF=-1;
    public static final int AMPERSAND=4;
    public static final int AND=5;
    public static final int ARG=6;
    public static final int ARGUMENTUSE=7;
    public static final int ARITHMETIC=8;
    public static final int ASSIGN=9;
    public static final int BOOLEAN=10;
    public static final int CALLABLE=11;
    public static final int CHAR=12;
    public static final int CHARACTER=13;
    public static final int CHARAND=14;
    public static final int CHARFALSE=15;
    public static final int CHARNOT=16;
    public static final int CHAROR=17;
    public static final int CHARTRUE=18;
    public static final int CLOSEDCOMPOUND=19;
    public static final int COLON=20;
    public static final int COMMA=21;
    public static final int COMMENT=22;
    public static final int COMPOUND=23;
    public static final int CONDITIONAL=24;
    public static final int DECLARATION=25;
    public static final int DECLARGUMENTS=26;
    public static final int DIGIT=27;
    public static final int DIVIDE=28;
    public static final int DO=29;
    public static final int ELSE=30;
    public static final int EQUAL=31;
    public static final int EXPRESSION=32;
    public static final int EXPRESSIONS=33;
    public static final int FI=34;
    public static final int FUNCTIONDECLARATION=35;
    public static final int GREATER=36;
    public static final int GREATEREQ=37;
    public static final int IDENTIFIER=38;
    public static final int IF=39;
    public static final int INTEGER=40;
    public static final int LCURLY=41;
    public static final int LETTER=42;
    public static final int LOWER=43;
    public static final int LPAREN=44;
    public static final int MINUS=45;
    public static final int MULTI=46;
    public static final int NOT=47;
    public static final int NOTEQUAL=48;
    public static final int NUMBER=49;
    public static final int OD=50;
    public static final int OR=51;
    public static final int PLUS=52;
    public static final int PRINT=53;
    public static final int PROCEDUREDECLARATION=54;
    public static final int PROGRAM=55;
    public static final int QUOTE=56;
    public static final int RCURLY=57;
    public static final int READ=58;
    public static final int RETURN=59;
    public static final int ROUTINECALL=60;
    public static final int RPAREN=61;
    public static final int SEMICOLON=62;
    public static final int SINGLEQUOTE=63;
    public static final int SMALLER=64;
    public static final int SMALLEREQ=65;
    public static final int STRING=66;
    public static final int SUBEXPRESSION=67;
    public static final int TEXT=68;
    public static final int THEN=69;
    public static final int UPPER=70;
    public static final int VOID=71;
    public static final int WHILE=72;
    public static final int WS=73;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public GrammarParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public GrammarParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return GrammarParser.tokenNames; }
    public String getGrammarFileName() { return "/home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:91:1: program : programBody EOF -> ^( PROGRAM programBody ) ;
    public final GrammarParser.program_return program() throws RecognitionException {
        GrammarParser.program_return retval = new GrammarParser.program_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        GrammarParser.programBody_return programBody1 =null;


        Object EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_programBody=new RewriteRuleSubtreeStream(adaptor,"rule programBody");
        try {
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:92:2: ( programBody EOF -> ^( PROGRAM programBody ) )
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:92:4: programBody EOF
            {
            pushFollow(FOLLOW_programBody_in_program1110);
            programBody1=programBody();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_programBody.add(programBody1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program1112); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: programBody
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 93:4: -> ^( PROGRAM programBody )
            {
                // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:93:7: ^( PROGRAM programBody )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                adaptor.addChild(root_1, stream_programBody.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class programBody_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "programBody"
    // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:96:1: programBody : ( compoundExpression ) -> ^( COMPOUND compoundExpression ) ;
    public final GrammarParser.programBody_return programBody() throws RecognitionException {
        GrammarParser.programBody_return retval = new GrammarParser.programBody_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        GrammarParser.compoundExpression_return compoundExpression3 =null;


        RewriteRuleSubtreeStream stream_compoundExpression=new RewriteRuleSubtreeStream(adaptor,"rule compoundExpression");
        try {
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:97:2: ( ( compoundExpression ) -> ^( COMPOUND compoundExpression ) )
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:97:4: ( compoundExpression )
            {
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:97:4: ( compoundExpression )
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:97:5: compoundExpression
            {
            pushFollow(FOLLOW_compoundExpression_in_programBody1136);
            compoundExpression3=compoundExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_compoundExpression.add(compoundExpression3.getTree());

            }


            // AST REWRITE
            // elements: compoundExpression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 98:4: -> ^( COMPOUND compoundExpression )
            {
                // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:98:7: ^( COMPOUND compoundExpression )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(COMPOUND, "COMPOUND")
                , root_1);

                adaptor.addChild(root_1, stream_compoundExpression.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "programBody"


    public static class closedCompoundExpression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "closedCompoundExpression"
    // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:101:1: closedCompoundExpression : ( LCURLY compoundExpression RCURLY ) -> ^( COMPOUND compoundExpression ) ;
    public final GrammarParser.closedCompoundExpression_return closedCompoundExpression() throws RecognitionException {
        GrammarParser.closedCompoundExpression_return retval = new GrammarParser.closedCompoundExpression_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token LCURLY4=null;
        Token RCURLY6=null;
        GrammarParser.compoundExpression_return compoundExpression5 =null;


        Object LCURLY4_tree=null;
        Object RCURLY6_tree=null;
        RewriteRuleTokenStream stream_LCURLY=new RewriteRuleTokenStream(adaptor,"token LCURLY");
        RewriteRuleTokenStream stream_RCURLY=new RewriteRuleTokenStream(adaptor,"token RCURLY");
        RewriteRuleSubtreeStream stream_compoundExpression=new RewriteRuleSubtreeStream(adaptor,"rule compoundExpression");
        try {
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:102:2: ( ( LCURLY compoundExpression RCURLY ) -> ^( COMPOUND compoundExpression ) )
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:102:4: ( LCURLY compoundExpression RCURLY )
            {
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:102:4: ( LCURLY compoundExpression RCURLY )
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:102:5: LCURLY compoundExpression RCURLY
            {
            LCURLY4=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_closedCompoundExpression1161); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LCURLY.add(LCURLY4);


            pushFollow(FOLLOW_compoundExpression_in_closedCompoundExpression1163);
            compoundExpression5=compoundExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_compoundExpression.add(compoundExpression5.getTree());

            RCURLY6=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_closedCompoundExpression1165); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RCURLY.add(RCURLY6);


            }


            // AST REWRITE
            // elements: compoundExpression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 103:4: -> ^( COMPOUND compoundExpression )
            {
                // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:103:7: ^( COMPOUND compoundExpression )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(COMPOUND, "COMPOUND")
                , root_1);

                adaptor.addChild(root_1, stream_compoundExpression.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "closedCompoundExpression"


    public static class compoundExpression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "compoundExpression"
    // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:106:1: compoundExpression : ( expression ( SEMICOLON expression )* ) -> ^( EXPRESSIONS ( expression )+ ) ;
    public final GrammarParser.compoundExpression_return compoundExpression() throws RecognitionException {
        GrammarParser.compoundExpression_return retval = new GrammarParser.compoundExpression_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token SEMICOLON8=null;
        GrammarParser.expression_return expression7 =null;

        GrammarParser.expression_return expression9 =null;


        Object SEMICOLON8_tree=null;
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        try {
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:107:2: ( ( expression ( SEMICOLON expression )* ) -> ^( EXPRESSIONS ( expression )+ ) )
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:107:4: ( expression ( SEMICOLON expression )* )
            {
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:107:4: ( expression ( SEMICOLON expression )* )
            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:107:5: expression ( SEMICOLON expression )*
            {
            pushFollow(FOLLOW_expression_in_compoundExpression1190);
            expression7=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_expression.add(expression7.getTree());

            // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:107:16: ( SEMICOLON expression )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==SEMICOLON) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:107:17: SEMICOLON expression
            	    {
            	    SEMICOLON8=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_compoundExpression1193); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_SEMICOLON.add(SEMICOLON8);


            	    pushFollow(FOLLOW_expression_in_compoundExpression1195);
            	    expression9=expression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_expression.add(expression9.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }


            // AST REWRITE
            // elements: expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 108:4: -> ^( EXPRESSIONS ( expression )+ )
            {
                // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:108:7: ^( EXPRESSIONS ( expression )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(EXPRESSIONS, "EXPRESSIONS")
                , root_1);

                if ( !(stream_expression.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_expression.hasNext() ) {
                    adaptor.addChild(root_1, stream_expression.nextTree());

                }
                stream_expression.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "compoundExpression"


    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expression"
    // /home/mark/Documenten/School/1-2b-Vertalerbouw/workspace/VB_EOVB/src/grammar/Grammar.g:111:1: expression : ( ( IDENTIFIER ASSIGN )=> assignStatement -> ^( ASSIGN assignStatement ) | ( returnType IDENTIFIER LPAREN )=> functionDeclaration -> ^( FUNCTIONDECLARATION functionDeclaration ) | ( VOID IDENTIFIER LPAREN )=> procedureDeclaration -> ^( PROCEDUREDECLARATION procedureDeclaration ) | arithmeticExpression -> ^( ARITHMETIC arithmeticExpression ) | declaration -> ^( DECLARATION declaration ) | readStatement -> ^( READ readStatement ) | printStatement -> ^( PRINT printStatement ) | conditionalStatement -> ^( CONDITIONAL conditionalStatement ) | whileStatement -> ^( WHILE whileStatement ) );
    public final GrammarParser.expression_return expression() throws RecognitionException {
        GrammarParser.expression_return retval = new GrammarParser.expression_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        GrammarParser.assignStatement_return assignStatement10 =null;

        GrammarParser.functionDeclaration_return functionDeclaration11 =null;

        GrammarParser.procedureDeclaration_return procedureDeclaration12 =null;

        GrammarParser.arithmeticExpression_return arithmeticExpression13 =null;

        GrammarParser.declaration_return declaration14 =null;

        GrammarParser.readStatement_return readStatement15 =null;

        GrammarParser.printStatement_return printStatement16 =null;

        GrammarParser.conditionalStatement_return conditionalStatement17 =null;

        GrammarParser.whileStatement_return whileStatement18 =null;

